# chronicle

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  IMPROVEMENTS_REPORT.md  LICENSE  README.md  my_journey.md  pyproject.toml
chronicle/: __init__.py  db.py  export.py  main.py  tui.py
chronicle_log.egg-info/: PKG-INFO  SOURCES.txt  requires.txt
shell_completions/: chronicle.bash  chronicle.fish  chronicle.zsh
tests/: test_db.py
