# pyproject.toml
[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "chronicle-log"
version = "0.1.0"
description = "A CLI logbook for makers, builders, and creators to track their project journey."
readme = "README.md"
license = { text = "MIT" }
authors = [
    { name = "Pratyay Mukherjee", email = "prtyay.bsmsfs23@tr.nfsu.edu.in" }
]
requires-python = ">=3.9"
keywords = [
    "cli",
    "logbook",
    "journal",
    "project",
    "maker",
    "builder",
    "productivity",
    "logging",
    "tui",
    "terminal",
    "command-line",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business",
    "Topic :: Software Development :: Libraries :: Application Development Tools",
    "Topic :: Text Processing :: General",
]
dependencies = [
    "typer>=0.9",
    "rich>=13",
    "textual>=8.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "twine>=6.0",
    "build>=1.0",
]

[project.urls]
Homepage = "https://github.com/distortedteen/chronicle"
Repository = "https://github.com/distortedteen/chronicle"
Issues = "https://github.com/distortedteen/chronicle/issues"
Changelog = "https://github.com/distortedteen/chronicle/releases"

[project.scripts]
chronicle = "chronicle.main:app"

[tool.setuptools.packages.find]
where = ["."]
include = ["chronicle*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]

[tool.coverage.run]
source = ["chronicle"]
omit = ["*/tests/*", "*/test_*.py"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise AssertionError",
    "raise NotImplementedError",
    "if __name__ == .__main__.:",
]
